k8s/deploy.yaml
apiVersion: v1
kind: Deployment
metadata:
  name: ivo

spec
  replicas:


  template:
    container:
      - name:
        image:
        port:
