k8s/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: python-service
  namespace: ivolve

spec:
  selector:
    app: python

  ports:
    - port: 80
      targetPort: 3500

  type: ClusterIP
